Fix : Adjust Top spacing for archive issue

--- a/css/issue-archive.css
+++ b/css/issue-archive.css
@@ -164,7 +164,7 @@
 }
 
 .issue-archive-year{
-    margin-top: 72px;
+    margin-top: 12px;
 }
 
 
@@ -178,7 +178,7 @@
     }
 
     .issue-archive-year{
-        margin-top: 24px;
+        margin-top: 0px;
     }
 
     .year-section-title{
@@ -195,6 +195,10 @@
 
     .issue-archive-card{
         margin-bottom: 8px;
+    }
+
+    #issue-archive-content-container{
+        margin-top: 8px;
     }
 
 }
